--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,24 @@
-.App {
-  
-    p {
-      font-size: 50px;
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
 
-  }
+$main-background:#24323F;
+$dark-background:#1A2634;
+$accent-color:#21E18C;
+$font-color:#FFFFFF;
+
+/* font-family: 'Anton', sans-serif; 
+font-family: 'Roboto', sans-serif;*/
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+/* -----Header------- */
+
+
+/* -----Main---------- */
+
+
+
+/* -----Footer-------- */
