--- a/src/App.scss
+++ b/src/App.scss
@@ -15,13 +15,21 @@ font-family: 'Roboto', sans-serif;*/
 }
 
 /* -----Header------- */
-.header{
+header{
+  color: $font-color;
   padding: 3em;
   display:flex;
   justify-content: space-around;
   background-color: $dark-background;
-
-  
+   
+  h1{
+    text-transform: uppercase;
+    font-size: 4em;
+    font-family: 'Anton', sans-serif; 
+    span{
+      color:$accent-color;
+    }
+  }
   .search-box{
     width: 40%;
     display: flex;
@@ -38,9 +46,12 @@ font-family: 'Roboto', sans-serif;*/
     }
   }
 
-  a{
+  a:active, a:visited, a{
     text-decoration: none;
+    color: $font-color;
+    font-size: 3em;
   }
+   
 }
 
 
