--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,16 @@
 
   }
 }
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.movieItem {
+  display: flex;
+  flex-direction: column;
+
+  margin: 1em;
+
+}
