--- a/src/App.scss
+++ b/src/App.scss
@@ -23,9 +23,12 @@ header{
   background-color: $dark-background;
    
   h1{
+    font-family: 'Anton', sans-serif;
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: left;
+   /*  margin-left: 2%; */
     text-transform: uppercase;
-    font-size: 4em;
-    font-family: 'Anton', sans-serif; 
     span{
       color:$accent-color;
     }
@@ -56,18 +59,55 @@ header{
 
 /* -----Main---------- */
 main {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   background-color: $main-background;
   color: $font-color;
+  padding: 4%;
+  h1 {
+    font-family: 'Anton', sans-serif; 
+    font-size: 3rem;
+    padding-left: 1%;
+    font-weight: lighter;
+  }
+  .body-movies {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    a {
+      text-decoration: none;
+    }
+  }
 }
 
 .movieItem {
   display: flex;
   flex-direction: column;
-
   margin: 1em;
-
+  color: $font-color;
+  text-decoration: none;
+  border-style: none;
+  position: relative;
+  .vote {
+    background: $accent-color;
+    border-radius: 40px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 7px;
+    top: 10px;
+  }
+  .release-genre {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+  }
+  .name {
+    font-family: 'Anton', sans-serif;
+    font-size: 1.5rem;
+    text-decoration: none;
+    list-style: none;
+    font-weight: lighter;
+  }
 }
 
 
