--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ font-family: 'Roboto', sans-serif;*/
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-
+svg {
+  color : "red";
+}
 /* -----Header------- */
 .header {
   color: #FFFFFF;
