--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ font-family: 'Roboto', sans-serif;*/
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 /* -----Header------- */
@@ -21,6 +22,7 @@ header{
   display:flex;
   justify-content: space-around;
   background-color: $dark-background;
+  align-items: center;
    
   h1{
     font-family: 'Anton', sans-serif;
@@ -35,15 +37,26 @@ header{
   }
   .search-box{
     width: 40%;
-    display: flex;
+    display: flex; 
+    border-radius: 2em;
+    background-color: $main-background;
     input{
-       width: 80%;
-       height: 3em;
+       width: 85%;
+       height: 90%;
+       background-color: $main-background;
+       font-size: 1.2em;
+       color: $font-color;
+       border-radius: 2em;
+       border-style: none;
+       padding: 0.5em;
+       font-family: 'Roboto', sans-serif; 
     }
     .search-icon-box{
-      width: 20%;
+      width: 10%;
+      padding-top: 0.5em;
+      padding-left: 0.5em;
       img{
-        width: 2em;
+        width: 1.5em;
         color: $accent-color;
       }
     }
@@ -52,7 +65,7 @@ header{
   a:active, a:visited, a{
     text-decoration: none;
     color: $font-color;
-    font-size: 3em;
+    font-size: 1.5em;
   }
    
 }
@@ -110,7 +123,6 @@ main {
   }
 }
 
-
 /* -----Footer-------- */
 .foot-style {
   background: $dark-background;
@@ -143,3 +155,43 @@ main {
   }
 }
 
+/* -----Movie Details---------- */
+
+.movie_Details{
+  background-color: $main-background;
+  font-family: 'Roboto', sans-serif;
+  color: #FFFFFF;
+
+  .detail_title { 
+    font-family: 'Anton', sans-serif;
+    font-size: 3rem;
+    padding-left: 5%;
+    padding-top: 3%;
+  }
+  .contain_details{
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
+    h2{
+      font-family: 'Anton', sans-serif;
+      font-size: 1.5rem;
+    }
+    p{
+      font-size: 1.5rem;
+    }
+    
+  
+    .box_right{
+      width: 50%;
+  
+    }
+
+    .detail_grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      width: 100%;
+      row-gap: 1.5%;
+      margin-bottom: 4em;
+    }
+  }
+}
