--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,8 @@ header{
        border-radius: 2em;
        border-style: none;
        padding: 0.5em;
-       font-family: 'Roboto', sans-serif; 
+       font-family: 'Roboto', sans-serif;
+       outline-style: none;
     }
     .search-icon-box{
       width: 10%;
