--- a/src/App.scss
+++ b/src/App.scss
@@ -180,7 +180,13 @@ main {
     p{
       font-size: 1.5rem;
     }
-    
+    .box_left{
+      img{
+        width: 90%;
+        height: 100%;
+      }
+  
+    }
   
     .box_right{
       width: 50%;
