--- a/src/App.scss
+++ b/src/App.scss
@@ -100,6 +100,10 @@ main {
   border-style: none;
   position: relative;
   max-width: 300px;
+  img:hover {
+    width: 207px;
+    box-shadow: rgba(99, 97, 97, 0.56) 0px 22px 70px 4px;
+  }
   .vote {
     background: $accent-color;
     border-radius: 40px;
