--- a/src/App.scss
+++ b/src/App.scss
@@ -184,7 +184,10 @@ main {
     .box_left{
       img{
         width: 90%;
-        height: 100%;
+        // height: 100%;
+
+        object-fit: cover;
+        object-position: center;
       }
   
     }
