--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,14 @@ header{
   }
    
 }
+.css-b8ldur-Input {
+
+}
+#react-select-3-input {
+  outline-style: none;
+    background: $main-background;
+    border-color: $accent-color;
+}
 
 
 /* -----Main---------- */
