--- a/src/App.scss
+++ b/src/App.scss
@@ -239,6 +239,37 @@ main {
   }
 }
 
+//Nav
+.nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: $main-background;
+  padding: 2%;
+
+  a {
+    color: $font-color;
+    font-size: 2rem;
+    text-decoration: none;
+
+    &:hover {
+      color: $accent-color;
+    }
+  }
+
+}
+
+// Errors
+.err404 {
+  text-align: center;
+  font-size: 3rem;
+  padding: 3% 15%;
+  color: $font-color;
+  background-color: $main-background;
+  img {
+    width: 30%;
+  }
+}
+
 /* ----- media queries----- */
 @media screen and (max-width: 1200px) {
   
