--- a/src/App.scss
+++ b/src/App.scss
@@ -153,6 +153,16 @@ main {
       text-decoration: none;
     }
   }
+  .body-found-movies{
+    h2{
+      // color: $accent-color;
+      text-align: center;
+      padding: 1em;
+      font-weight: 100;
+      font-family: 'Roboto', sans-serif;
+    }
+  }
+  
 }
 
 .movieItem {
@@ -171,8 +181,8 @@ main {
     width: 220px; */
     img {
       width: 100%;
-      height: 280px;
-      object-fit: cover;
+      max-height: 300px;
+      object-fit:cover;
       object-position: center;
     }
     img:hover { 
@@ -181,15 +191,15 @@ main {
     }
     .vote {
       background: $accent-color;
-      border-radius: 40px;
-      width: 40px;
-      height: 40px;
+      border-radius: 50%;
+      width: 3em;
+      height: 3em;
       display: flex;
       justify-content: center;
       align-items: center;
       position: absolute;
-      right: 7px;
-      top: 10px;
+      right: 3%;
+      top: 3%;
     }
   }
   
@@ -215,6 +225,12 @@ main {
   display: flex;
   align-items: center;
   padding: 2%;
+  a:active, a:visited, a{
+    text-decoration: none;
+    color: $font-color;
+    font-size: 1.5em;
+    outline-style: none;
+  }
   h1 {
     font-family: 'Anton', sans-serif;
     font-size: 2.5rem;
@@ -288,10 +304,17 @@ main {
     padding-left: 5%;
   }
   .all_videos{
+    overflow: scroll;
     gap: 2%;
     padding: 5%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    .video-box{
+      margin: 0 auto;
+      img{
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -385,17 +408,112 @@ main {
   }
 
 
-    /* -----Footer-------- */
-.foot-style {
-  h1 {
-    font-size: 1.8rem;
+      /* -----Footer-------- */
+  .foot-style {
+    h1 {
+      font-size: 1.8rem;
+    }
+    p {
+      font-size: .8rem;
+    }
+    .socialmedia-icon {
+      margin-left: 20%;
+    }
   }
-  p {
-    font-size: .8rem;
+
+  /* -----Movie Details---------- */
+
+  .movie_Details{
+    background-color: $main-background;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+
+    .detail_title { 
+      font-family: 'Anton', sans-serif;
+      font-size: 2rem;
+      padding-left: 10%;
+      padding-top: 3%;
+    }
+    .contain_details{
+      width: 90%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      h2{
+        font-family: 'Anton', sans-serif;
+        font-size: 1.2rem;
+      }
+      p{
+        font-size: 1.2rem;
+      }
+      .box_left{
+        width: 100%;
+        img{
+          width: 100%;
+          // height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+
+      .detail_grid{
+        padding-top: 2em;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        width: 100%;
+        row-gap: 1.5%;
+        margin-bottom: 2em;
+      }
+    }
+    h2{
+      font-family: 'Anton', sans-serif;
+      font-size: 1.2rem;
+      
+    }
+    .all_videos{
+      gap: 2%;
+      margin: 0 auto;
+      overflow:scroll;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      .video-box{
+        margin: 0 auto;
+        img{
+          width: 100%;
+        }
+      }
+    }
   }
-  .socialmedia-icon {
-    margin-left: 20%;
+
+  /*-------MAIN --------*/
+  main {
+    padding: 4%;
+    h1 {
+      font-size: 2rem;
+      padding-left: 5%;
+      padding-bottom: 2%;
+    }
   }
-}
+
+  //Nav
+  .nav {
+    padding: 5%;
+
+    a {
+      font-size: 1.2rem;
+    }
+
+  }
+    // Errors
+  .err404 {
+    min-height: 50vh;
+    font-size: 1.5rem;
+    padding: 10% 15%;
+    img {
+      width: 30%;
+    }
+  }
+
+
 }
   
