--- a/src/App.scss
+++ b/src/App.scss
@@ -126,15 +126,17 @@ main {
   color: $font-color;
   text-decoration: none;
   border-style: none;
+  min-height: 400px;
  /*  position: relative; */
  /*  max-width: 300px; */
   .img-body {
     position: relative;
-    /* max-width: 300px; */
+    max-width: 300px;
     /* display: flex;
     width: 220px; */
     img {
-      width: 100%;
+      min-width: 100%;
+      /* min-height: 250px; */
       max-height: 300px;
       object-fit:cover;
       object-position: center;
