--- a/src/App.scss
+++ b/src/App.scss
@@ -466,7 +466,7 @@ main {
 
   /*-------MAIN --------*/
   main {
-    padding: 4%;
+    padding: 5%;
     h1 {
       font-size: 2rem;
       padding-left: 5%;
@@ -478,12 +478,13 @@ main {
   .nav {
     display: flex;
     justify-content:space-between;
-    padding: 1%;
+    padding: 5%;
 
     a {
       font-size: 1rem;
       padding: 1%;
       width: 40%;
+      text-align: center;
     }
 
   }
