--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,6 @@ header{
       padding-right: 7px;
     }
   }
-
 }
 
 /* -----Main---------- */
@@ -257,16 +256,11 @@ main {
     padding-left: 5%;
   }
   .all_videos{
-    // overflow: scroll;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
+    overflow: scroll;
     gap: 2%;
     padding: 5%;
-    gap:2em;
-    // display: grid;
-    // grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
     .video-box{
       margin: 0 auto;
       img{
@@ -285,24 +279,13 @@ main {
 
   a {
     color: $font-color;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-decoration: none;
-    border: 1px solid $accent-color;
-    border-radius: 5px;
-    padding: 5px 20px 10px;
-    background: $dark-background;
+
     &:hover {
       color: $accent-color;
-      box-shadow: rgba(99, 97, 97, 0.56) 0px 12px 30px 4px;
     }
-    &:active {
-      color: $accent-color;
-    }
-   /*  &:visited {
-      color: $accent-color;
-    } */
   }
-  
 
 }
 
@@ -404,7 +387,7 @@ main {
       padding-top: 3%;
     }
     .contain_details{
-      width: 100%;
+      width: 90%;
       display: flex;
       justify-content: space-between;
       flex-direction: column;
@@ -416,8 +399,7 @@ main {
         font-size: 1.2rem;
       }
       .box_left{
-        width: 90%;
-        margin: 0 auto;
+        width: 100%;
         img{
           width: 100%;
           // height: 100%;
@@ -425,17 +407,14 @@ main {
           object-position: center;
         }
       }
+
       .detail_grid{
         padding-top: 2em;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
         width: 100%;
+        row-gap: 1.5%;
         margin-bottom: 2em;
-        text-align: left;
-        p{
-          padding-bottom:1em;
-          padding-left: 2em;
-        }
       }
     }
     h2{
@@ -443,20 +422,16 @@ main {
       font-size: 1.2rem;
       
     }
-    .contain-videos{
-      width: 90%;
-      margin: 0 auto;
-    }
     .all_videos{
+      gap: 2%;
       margin: 0 auto;
-      // overflow:scroll;
-      // display: grid;
-      // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      overflow:scroll;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       .video-box{
         margin: 0 auto;
         img{
           width: 100%;
-          object-fit: contain;
         }
       }
     }
@@ -483,11 +458,9 @@ main {
   }
     // Errors
   .err404 {
-    min-height: 100vh;
+    min-height: 50vh;
     font-size: 1.5rem;
-    padding: 50% 15%;
-    
-    
+    padding: 10% 15%;
     img {
       width: 30%;
     }
