nav fix // detail error catch

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,7 +92,7 @@ main {
   /* margin-top: 10%; */
   background-color: $main-background;
   color: $font-color;
-  padding: 4%;
+  padding: 0 4% 4% 4%;
   h1 {
     font-family: 'Anton', sans-serif; 
     font-size: 3rem;
