--- a/src/App.scss
+++ b/src/App.scss
@@ -209,11 +209,11 @@ main {
       color: $accent-color;
       margin-right: 2%;
     }
-  }
-  h1:hover {
-    color: $accent-color;
-    .dot:hover {
-      color: $font-color;
+    &:hover span {
+      animation-name: hopp;
+      animation-duration: 0.5s;
+      animation-iteration-count: 2;
+      animation-timing-function: ease-in-out;
     }
   }
   a {
@@ -374,7 +374,7 @@ main {
     }
   }
   p{
-     padding: 3em;
+     padding: 2em;
      width: 50%;
      margin: 0 auto;
   }
@@ -391,7 +391,7 @@ main {
      margin-bottom: 3em;
   }
   .raccoon-side {
-    font-size: 6rem;
+    font-size: 3rem;
     position: relative;
     left: -60%;
     transform: rotate(90deg);
